se carga tema 4

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -127,3 +127,7 @@
     background-repeat: no-repeat
     background-position: top left
     background-size: cover
+
+
+.tarjeta-numerada
+  height: 100%
