se carga tema 5

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -131,3 +131,25 @@
 
 .tarjeta-numerada
   height: 100%
+
+
+.title-cus
+  background-color: $color-secundario
+  -webkit-border-top-right-radius: 125px;
+  -webkit-border-bottom-right-radius: 125px;
+  -moz-border-radius-topright: 125px;
+  -moz-border-radius-bottomright: 125px;
+  border-top-right-radius: 125px;
+  border-bottom-right-radius: 125px;
+  color: #fff !important;
+  width: max-content;
+.pr-cus
+  padding-right: 2rem;
+.pl-cus
+  padding-left: 1rem;
+.px-sm-5-cus
+  padding: 0 20px;
+
+
+.tabla-b, .tabla-b td
+  border: 1px solid #e8e8e8
