se cargan ajustes de contenido

--- a/src/styles/_custom.sass
+++ b/src/styles/_custom.sass
@@ -3,27 +3,27 @@
     animation: float1 3.5s ease-in-out infinite alternate
     position: absolute
     top: 5%
-    right: 5%
+    right: 15%
   &-2
     animation: float1 2.8s ease-in-out infinite alternate
     position: absolute
     top: 12%
-    left: 0%
+    left: -10%
   &-3
     animation: float2 1.8s ease-in-out infinite alternate
     position: absolute
     top: 45%
-    left: 38%
+    left: 28%
   &-4
     animation: float1 1.5s ease-in-out infinite alternate
     position: absolute
     top: 70%
-    left: 5%
+    left: 0%
   &-5
     animation: float1 2.5s ease-in-out infinite alternate
     position: absolute
     top: 60%
-    right: 15%
+    right: 30%
 
 @keyframes float1
   0%
@@ -40,6 +40,8 @@
   100%
     transform: translateY(0px)
 
+.banner-principal__img img
+  max-width: 370px
 
 .titulo-principal__numero
   background: $color-acento-contenido
@@ -48,7 +50,7 @@
 .boton *,
 .tarjeta-numerada.color-primario .tarjeta-numerada__numero div,
 .img-infografica__item__numero
-    color: #fff !important;
+    color: #fff !important
 
 //acordion
 
@@ -56,20 +58,20 @@
   background-color: #F6F6F6
 
 .bg-gradient-cus
-  background: rgba(255,255,255, 0.2);
-  background: linear-gradient(343deg, rgba(97,140,235,0.2) 0%, rgba(217,171,244,0.2) 27%, rgba(131,210,241,0.2) 100%);
+  background: rgba(255,255,255, 0.2)
+  background: linear-gradient(343deg, rgba(97,140,235,0.2) 0%, rgba(217,171,244,0.2) 27%, rgba(131,210,241,0.2) 100%)
   border: 0
 
 .border-img-cus
   border: 1px solid rgba(107, 63, 209, .15)
 
 .acordion__activo
-  background: rgba(255,255,255, 0.2);
-  background: linear-gradient(343deg, rgba(97,140,235,0.2) 0%, rgba(217,171,244,0.2) 27%, rgba(131,210,241,0.2) 100%);
+  background: rgba(255,255,255, 0.2)
+  background: linear-gradient(343deg, rgba(97,140,235,0.2) 0%, rgba(217,171,244,0.2) 27%, rgba(131,210,241,0.2) 100%)
   border: 0
 
 .img-infografica .img-infografica__item
-  width: 5.5%;
+  width: 5.5%
 
 .bg-img-infografica
   background: #E9DFFC
@@ -94,17 +96,17 @@
   top: -5%
 
 .tarjeta-avatar>img
-  width: 90px;
+  width: 90px
 
 .tarjeta-avatar
-  padding-top: 50px;
+  padding-top: 50px
 
 .tarjeta-avatar .tarjeta
-  width: 100%;
+  width: 100%
 
 .tarjeta.bg-gradiente
-  background: rgba(255,255,255, 0.2);
-  background: linear-gradient(343deg, rgba(97,140,235,0.2) 0%, rgba(217,171,244,0.2) 27%, rgba(131,210,241,0.2) 100%);
+  background: rgba(255,255,255, 0.2)
+  background: linear-gradient(343deg, rgba(97,140,235,0.2) 0%, rgba(217,171,244,0.2) 27%, rgba(131,210,241,0.2) 100%)
   border: 1px solid rgba(107, 63, 209, .15)
 
 ////// Backgrounds
@@ -135,20 +137,20 @@
 
 .title-cus
   background-color: $color-secundario
-  -webkit-border-top-right-radius: 125px;
-  -webkit-border-bottom-right-radius: 125px;
-  -moz-border-radius-topright: 125px;
-  -moz-border-radius-bottomright: 125px;
-  border-top-right-radius: 125px;
-  border-bottom-right-radius: 125px;
-  color: #fff !important;
-  width: max-content;
+  -webkit-border-top-right-radius: 125px
+  -webkit-border-bottom-right-radius: 125px
+  -moz-border-radius-topright: 125px
+  -moz-border-radius-bottomright: 125px
+  border-top-right-radius: 125px
+  border-bottom-right-radius: 125px
+  color: #fff !important
+  width: max-content
 .pr-cus
-  padding-right: 2rem;
+  padding-right: 2rem
 .pl-cus
-  padding-left: 1rem;
+  padding-left: 1rem
 .px-sm-5-cus
-  padding: 0 20px;
+  padding: 0 20px
 
 
 .tabla-b, .tabla-b td
